--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -152,6 +152,9 @@
                                 <datalist id="suggestions">
                                 </datalist>
                             </div>
+                            <div class="mt-3 d-none" id="search-text-info-group">
+                                <p class="text-muted text-center" id="search-text-info"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
