search by filename

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -127,7 +127,6 @@
                             <button id="description-button" class="btn btn-link" data-toggle="collapse"
                                     data-target="#descCollapse"
                                     aria-expanded="true" aria-controls="descCollapse">
-                                By description | filename | iconclass | tag
                             </button>
                         </h5>
                     </div>
@@ -140,11 +139,7 @@
                                             type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                         Description:
                                     </button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#" id="search-select-description">Description</a>
-                                        <a class="dropdown-item" href="#" id="search-select-filename">Filename</a>
-                                        <a class="dropdown-item" href="#" id="search-select-iconclass">Iconclass</a>
-                                        <a class="dropdown-item" href="#" id="search-select-tag">Tag</a>
+                                    <div class="dropdown-menu" id="search-dropdown">
                                     </div>
                                 </div>
                                 <input type="text" list="suggestions" class="from-control" style="flex: auto"
