add descriptive tooltips

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -111,7 +111,7 @@
                             <button id="img-button" class="btn btn-link" data-toggle="collapse"
                                     data-target="#imgCollapse"
                                     aria-expanded="true" aria-controls="imgCollapse">
-                                By image
+                                <span data-toggle="tooltip" title="Search for images solely based on image-to-image similarity implemented by selected model. Accepts image copy+paste input."> By image </span>
                             </button>
                         </h5>
                     </div>
