--- a/qurator/sbb_images/webapp/static/region-annotator.html
+++ b/qurator/sbb_images/webapp/static/region-annotator.html
@@ -49,7 +49,7 @@
                     <div class="input-group-prepend">
                         <span class="input-group-text">Image-URL:</span>
                     </div>
-                    <input type="text" list="suggestions" class="form-control form-control-sm"
+                    <input type="text" list="suggestions" class="form-control"
                            id="annotation-url" autocomplete="off"/>
                     <datalist id="suggestions">
                     </datalist>
