dynamic loading of additional results

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -174,7 +174,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-2 text-center" style="height: 80vh;overflow-y: scroll;">
+    <div class="row mt-2 text-center" style="height: 80vh;overflow-y: scroll;" id="search-results-container">
         <div class="col-12">
             <div class="row mt-2 text-center" id="search-results" >
                 <!-- Search results -->
