--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -229,6 +229,7 @@
                     </div>
                 </div>
                 <button type="button" class="btn btn-outline-secondary btn-sm ml-2" id="select-none">Select none</button>
+                <button type="button" class="btn btn-outline-secondary btn-sm ml-2" id="get-spreadsheet">Selection as spreadsheet</button>
             </form>
         </div>
     </div>
