Add tag + Deselect functionality

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -184,6 +184,11 @@
                                 title="Add tag to all selected images.">
                                 Add tag
                             </a>
+                            <a class="dropdown-item" id="tag-select-add-deselect"
+                                data-toggle="tooltip"
+                                title="Add tag to all selected images. Clear selection afterwards.">
+                                Add tag + Deselect
+                            </a>
                             <a class="dropdown-item" id="tag-select-remove"
                                 data-toggle="tooltip"
                                 title="Remove tag from all selected images.">
