Add select-all functionality

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -206,30 +206,35 @@
                             data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
                     </button>
                     <div class="dropdown-menu" id="img-select-button-dropdown">
-                        <a class="dropdown-item" id="select-first-5"
+                        <a class="dropdown-item" id="select-5"
                             data-toggle="tooltip"
                             title="">
                             Select first 5
                         </a>
-                        <a class="dropdown-item" id="select-first-10"
+                        <a class="dropdown-item" id="select-10"
                             data-toggle="tooltip"
                             title="">
                             Select first 10
                         </a>
-                        <a class="dropdown-item" id="select-first-20"
+                        <a class="dropdown-item" id="select-20"
                             data-toggle="tooltip"
                             title="">
                             Select first 20
                         </a>
-                        <a class="dropdown-item" id="select-first-40"
+                        <a class="dropdown-item" id="select-40"
                             data-toggle="tooltip"
                             title="">
                             Select first 40
                         </a>
-                        <a class="dropdown-item" id="select-first-80"
+                        <a class="dropdown-item" id="select-80"
                             data-toggle="tooltip"
                             title="">
                             Select first 80
+                        </a>
+                        <a class="dropdown-item" id="select-all"
+                            data-toggle="tooltip"
+                            title="">
+                            Select all
                         </a>
                     </div>
                 </div>
