--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -102,6 +102,9 @@
                                     <p class="text-muted" id="model-description"></p>
                                 </div>
                             </div>
+                            <div class="mt-3 d-none" id="settings-info-group">
+                                <p class="text-muted text-center alert alert-danger" id="settings-info"></p>
+                            </div>
                         </div>
                     </div>
                 </div>
