Bildsuche first version without infinite scroll

--- a/qurator/sbb_images/webapp_react/public/index.html
+++ b/qurator/sbb_images/webapp_react/public/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="root">
-        <h1>Hello, this is a manual insertion!</h1>
+        <!-- <h1>Hello, this is a manual insertion!</h1> -->
     </div>
     <script src="bundle.js"></script>
 
