--- a/qurator/sbb_images/webapp_react/public/index.html
+++ b/qurator/sbb_images/webapp_react/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Bildsuche Test App</title>
+    <title>Stabi Image Search (Beta)</title>
 </head>
 
 <body>
