New About Page and Help, design tokens, cleaned up code, new icons

--- a/qurator/sbb_images/webapp_react/public/index.html
+++ b/qurator/sbb_images/webapp_react/public/index.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stabi Image Search (Beta)</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
-    <div id="root">
-        <!-- <h1>Hello, this is a manual insertion!</h1> -->
-    </div>
+    <div id="root"></div>
     <script src="bundle.js"></script>
-
 </body>
 
 </html>
